<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/settingsBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/ic_arrow_back"
                    android:contentDescription="@string/back_button"
                    android:onClick="backBtn"
                    android:stateListAnimator="@animator/button_effect" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/settings"
                    android:textColor="@color/lil_white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:paddingBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/pushIcon"
                        android:contentDescription="@string/push_notifications"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_notifications" />

                    <TextView
                        android:id="@+id/pushNof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/push_notifications"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/PushNofSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/pushDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/pushDesc" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/darkMode"
                        android:contentDescription="@string/dark_mode"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/outline_dark_mode_24" />

                    <TextView
                        android:id="@+id/darkTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/dark_mode"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/darkSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="5dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/darkDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/darkDesc" />

            </LinearLayout>

            <View
                android:id="@+id/view5"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/about"
                        android:contentDescription="@string/dark_mode"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_icons8_about" />

                    <TextView
                        android:id="@+id/aboutTitle"
                        android:layout_width="240dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/aboutTitle"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <TextView
                    android:id="@+id/aboutDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/about" />
                <TextView
                    android:id="@+id/acknowledgement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:justificationMode="inter_word"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/acknowledgement" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>