<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.charts.Chart">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_view">

        <LinearLayout
            android:id="@+id/chartsBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/covid_19"
                        android:textColor="@color/lil_white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/dashboard"
                        android:textColor="@color/lil_white" />

                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/settingsButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_setting"
                    android:contentDescription="@string/settings"
                    android:onClick="setting"
                    android:scaleType="centerInside"
                    android:stateListAnimator="@animator/button_effect" />

            </LinearLayout>

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:text="@string/charts"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                style="@style/card_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/histogram"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:contentDescription="@string/cards"
                        android:minHeight="48dp"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <com.anychart.AnyChartView
                        android:id="@+id/barChart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        >

                        <ProgressBar
                            android:id="@+id/progressBar1"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </com.anychart.AnyChartView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/card_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:padding="10dp"
                        android:text="@string/area_chart"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:contentDescription="@string/cards"
                        android:minHeight="48dp" />

                    <com.anychart.AnyChartView
                        android:id="@+id/areaChart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        >

                        <ProgressBar
                            android:id="@+id/progressBar2"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </com.anychart.AnyChartView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/card_view_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/states"
                        android:textAlignment="center"
                        android:layout_marginStart="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinnerLine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="5dp"
                        android:contentDescription="@string/cards"
                        android:minHeight="48dp" />

                    <com.anychart.AnyChartView
                        android:id="@+id/lineChart"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        >

                        <ProgressBar
                            android:id="@+id/progressBar3"
                            style="?android:attr/progressBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"/>
                    </com.anychart.AnyChartView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:labelVisibilityMode="selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>